<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Events"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="30dp"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"/>

    <!-- Scroll container for all sections -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!-- Confirmed Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirmed"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingVertical="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/confirmed_list"
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/dark_grey"
                android:dividerHeight="1dp"
                android:paddingVertical="4dp"
                android:listSelector="?android:attr/selectableItemBackground"
                tools:listitem="@layout/user_events_card"
                android:focusable="false"
                android:clickable="true" />

            <!-- Waitlist Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Waitlist"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingVertical="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/waitlist_list"
                android:paddingVertical="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/dark_grey"
                android:dividerHeight="1dp"
                android:focusable="false"
                android:clickable="true" />

            <!-- Past Events Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Past Events"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingVertical="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/past_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:listSelector="?android:attr/selectableItemBackground"
                android:focusable="false"
                android:clickable="true" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

