...
            android:textSize="14sp"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="TechSphere Convention Center Hall B, 124 Innovation Avenue Vancouver"/>

        <TextView
            android:id="@+id/event_counts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="500 Waitlisted | 30 Participating" />

        <LinearLayout
...
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_guidelines"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Guidelines" />

            <com.google.android.material.button.MaterialButton
...
