<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:id="@+id/notif_frag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Notifications"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_notifications_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/map_purple"
            app:strokeColor="@color/map_purple"
            app:strokeWidth="1dp"
            android:text="Clear all" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notification_recycler"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/notification_card"
        android:visibility="visible">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/no_notif_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        android:text="You have no new notifications"/>


</LinearLayout>
