...
        android:title="My Events" />
    <item
        android:id="@+id/BrowseFragment"
        android:icon="@drawable/ic_search"
        android:title="Browse" />
    <item
        android:id="@+id/NotifFragment"
        android:icon="@drawable/ic_notifications"
        android:title="Notifications" />
    <item
        android:id="@+id/MenuFragment"
        android:icon="@drawable/ic_menu"
        android:title="Menu" />
...
