...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToOutline="true"
        android:background="@drawable/bottom_nav_background">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_nav"
            app:labelVisibilityMode="labeled" />
        <com.google.android.material.bottomnavigation.BottomNavigationView
...
